--- a/map.html
+++ b/map.html
@@ -37,13 +37,13 @@
 </head>
 <body>
     <div class="map-container">
-        <a href="af.html" class="continent" id="africa">AF</a>
-        <a href="as.html" class="continent" id="asia">AS</a>
-        <a href="eu.html" class="continent" id="europe">EU</a>
-        <a href="na.html" class="continent" id="north-america">NA</a>
-        <a href="sa.html" class="continent" id="south-america">SA</a>
-        <a href="au.html" class="continent" id="australia">AU</a>
-        <a href="an.html" class="continent" id="antarctica">AN</a>
+        <a href="loc/af.html" class="continent" id="africa">AF</a>
+        <a href="loc/as.html" class="continent" id="asia">AS</a>
+        <a href="loc/eu.html" class="continent" id="europe">EU</a>
+        <a href="loc/na.html" class="continent" id="north-america">NA</a>
+        <a href="loc/sa.html" class="continent" id="south-america">SA</a>
+        <a href="loc/au.html" class="continent" id="australia">AU</a>
+        <a href="loc/an.html" class="continent" id="antarctica">AN</a>
     </div>
 </body>
 </html>
