--- a/loc/na.html
+++ b/loc/na.html
@@ -1,1 +1,218 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="List of North American countries with population and subregion information.">
+	<title>Countries in North America</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.country-item img {
+			width: 100%;
+			height: auto;
+			transition: opacity 0.3s;
+		}
+		.country-item a:hover img {
+			opacity: 0.8;
+		}
+		.country-item {
+			margin-bottom: 20px;
+		}
+		.country-item p {
+			text-align: center;
+			margin: 0;
+		}
+		.table {
+			margin-top: 20px;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<div class="container">
+			<h1 class="my-4">Countries in North America (23 Countries)</h1>
+			<p>Total Population: 592 million (as of 2021)</p>
+			<p>North America is the third-largest continent, with diverse geography and economies. It is made up of countries from Central America, the Caribbean, and North America.</p>
+		</div>
+	</header>
+	<main>
+		<div class="container">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Country</th>
+						<th>Flag</th>
+						<th>Population (2020)</th>
+						<th>Subregion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>United States</td>
+						<td><img src="/Countries/us.svg" alt="Flag of United States"></td>
+						<td>331,002,651</td>
+						<td>North America</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Mexico</td>
+						<td><img src="/Countries/mx.svg" alt="Flag of Mexico"></td>
+						<td>128,932,753</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>Canada</td>
+						<td><img src="/Countries/ca.svg" alt="Flag of Canada"></td>
+						<td>37,742,154</td>
+						<td>North America</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>Guatemala</td>
+						<td><img src="/Countries/gt.svg" alt="Flag of Guatemala"></td>
+						<td>17,915,568</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>Cuba</td>
+						<td><img src="/Countries/cu.svg" alt="Flag of Cuba"></td>
+						<td>11,326,616</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td>Haiti</td>
+						<td><img src="/Countries/ht.svg" alt="Flag of Haiti"></td>
+						<td>11,402,528</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>7</td>
+						<td>Dominican Republic</td>
+						<td><img src="/Countries/do.svg" alt="Flag of Dominican Republic"></td>
+						<td>10,847,910</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>8</td>
+						<td>Honduras</td>
+						<td><img src="/Countries/hn.svg" alt="Flag of Honduras"></td>
+						<td>9,904,607</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>9</td>
+						<td>El Salvador</td>
+						<td><img src="/Countries/sv.svg" alt="Flag of El Salvador"></td>
+						<td>6,486,205</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>10</td>
+						<td>Nicaragua</td>
+						<td><img src="/Countries/ni.svg" alt="Flag of Nicaragua"></td>
+						<td>6,624,554</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>11</td>
+						<td>Costa Rica</td>
+						<td><img src="/Countries/cr.svg" alt="Flag of Costa Rica"></td>
+						<td>5,094,118</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>12</td>
+						<td>Panama</td>
+						<td><img src="/Countries/pa.svg" alt="Flag of Panama"></td>
+						<td>4,314,767</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>13</td>
+						<td>Jamaica</td>
+						<td><img src="/Countries/jm.svg" alt="Flag of Jamaica"></td>
+						<td>2,961,167</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>14</td>
+						<td>Trinidad and Tobago</td>
+						<td><img src="/Countries/tt.svg" alt="Flag of Trinidad and Tobago"></td>
+						<td>1,399,488</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>15</td>
+						<td>Belize</td>
+						<td><img src="/Countries/bz.svg" alt="Flag of Belize"></td>
+						<td>397,621</td>
+						<td>Central America</td>
+					</tr>
+					<tr>
+						<td>16</td>
+						<td>Bahamas</td>
+						<td><img src="/Countries/bs.svg" alt="Flag of Bahamas"></td>
+						<td>393,244</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>17</td>
+						<td>Barbados</td>
+						<td><img src="/Countries/bb.svg" alt="Flag of Barbados"></td>
+						<td>287,371</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>18</td>
+						<td>Saint Lucia</td>
+						<td><img src="/Countries/lc.svg" alt="Flag of Saint Lucia"></td>
+						<td>183,627</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>19</td>
+						<td>Grenada</td>
+						<td><img src="/Countries/gd.svg" alt="Flag of Grenada"></td>
+						<td>112,523</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>20</td>
+						<td>Saint Vincent and the Grenadines</td>
+						<td><img src="/Countries/vc.svg" alt="Flag of Saint Vincent and the Grenadines"></td>
+						<td>110,940</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>21</td>
+						<td>Antigua and Barbuda</td>
+						<td><img src="/Countries/ag.svg" alt="Flag of Antigua and Barbuda"></td>
+						<td>97,929</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>22</td>
+						<td>Dominica</td>
+						<td><img src="/Countries/dm.svg" alt="Flag of Dominica"></td>
+						<td>71,986</td>
+						<td>Caribbean</td>
+					</tr>
+					<tr>
+						<td>23</td>
+						<td>Saint Kitts and Nevis</td>
+						<td><img src="/Countries/kn.svg" alt="Flag of Saint Kitts and Nevis"></td>
+						<td>53,199</td>
+						<td>Caribbean</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
